--- a/OSC_STM32F407.ioc
+++ b/OSC_STM32F407.ioc
@@ -72,53 +72,67 @@ Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin15=PB2
-Mcu.Pin16=PF11
-Mcu.Pin17=PF12
-Mcu.Pin18=PE7
-Mcu.Pin19=PE8
+Mcu.Pin10=PC2
+Mcu.Pin11=PC3
+Mcu.Pin12=PA0-WKUP
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
 Mcu.Pin2=PE4
-Mcu.Pin20=PE9
-Mcu.Pin21=PE10
-Mcu.Pin22=PE11
-Mcu.Pin23=PE12
-Mcu.Pin24=PE13
-Mcu.Pin25=PE14
-Mcu.Pin26=PE15
-Mcu.Pin27=PB10
-Mcu.Pin28=PB11
-Mcu.Pin29=PB15
+Mcu.Pin20=PB1
+Mcu.Pin21=PB2
+Mcu.Pin22=PF11
+Mcu.Pin23=PF12
+Mcu.Pin24=PE7
+Mcu.Pin25=PE8
+Mcu.Pin26=PE9
+Mcu.Pin27=PE10
+Mcu.Pin28=PE11
+Mcu.Pin29=PE12
 Mcu.Pin3=PE5
-Mcu.Pin30=PD8
-Mcu.Pin31=PD9
-Mcu.Pin32=PD10
-Mcu.Pin33=PD14
-Mcu.Pin34=PD15
-Mcu.Pin35=PG7
-Mcu.Pin36=PD0
-Mcu.Pin37=PD1
-Mcu.Pin38=PD2
-Mcu.Pin39=PD3
+Mcu.Pin30=PE13
+Mcu.Pin31=PE14
+Mcu.Pin32=PE15
+Mcu.Pin33=PB10
+Mcu.Pin34=PB11
+Mcu.Pin35=PB15
+Mcu.Pin36=PD8
+Mcu.Pin37=PD9
+Mcu.Pin38=PD10
+Mcu.Pin39=PD11
 Mcu.Pin4=PE6
-Mcu.Pin40=PD4
-Mcu.Pin41=PD5
-Mcu.Pin42=PD7
-Mcu.Pin43=PG12
-Mcu.Pin44=PE0
-Mcu.Pin45=PE1
-Mcu.Pin46=VP_CRC_VS_CRC
-Mcu.Pin47=VP_SYS_VS_Systick
+Mcu.Pin40=PD12
+Mcu.Pin41=PD13
+Mcu.Pin42=PD14
+Mcu.Pin43=PD15
+Mcu.Pin44=PG7
+Mcu.Pin45=PC6
+Mcu.Pin46=PC7
+Mcu.Pin47=PC8
+Mcu.Pin48=PC9
+Mcu.Pin49=PD0
 Mcu.Pin5=PC13-ANTI_TAMP
+Mcu.Pin50=PD1
+Mcu.Pin51=PD2
+Mcu.Pin52=PD3
+Mcu.Pin53=PD4
+Mcu.Pin54=PD5
+Mcu.Pin55=PD6
+Mcu.Pin56=PD7
+Mcu.Pin57=PG12
+Mcu.Pin58=PE0
+Mcu.Pin59=PE1
 Mcu.Pin6=PH0-OSC_IN
+Mcu.Pin60=VP_CRC_VS_CRC
+Mcu.Pin61=VP_SYS_VS_Systick
 Mcu.Pin7=PH1-OSC_OUT
-Mcu.Pin8=PA0-WKUP
-Mcu.Pin9=PA4
-Mcu.PinsNb=48
+Mcu.Pin8=PC0
+Mcu.Pin9=PC1
+Mcu.PinsNb=62
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=4.15.0
@@ -169,10 +183,34 @@ PB2.GPIO_Label=BSP_T_DOUT
 PB2.GPIO_PuPd=GPIO_PULLUP
 PB2.Locked=true
 PB2.Signal=GPIO_Input
+PC0.Locked=true
+PC0.Signal=GPIO_Input
+PC1.Locked=true
+PC1.Signal=GPIO_Input
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=BSP_T_CS
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Output
+PC2.Locked=true
+PC2.Signal=GPIO_Input
+PC3.Locked=true
+PC3.Signal=GPIO_Input
+PC4.Locked=true
+PC4.Signal=GPIO_Input
+PC5.Locked=true
+PC5.Signal=GPIO_Input
+PC6.Locked=true
+PC6.Signal=GPIO_Input
+PC7.Locked=true
+PC7.Signal=GPIO_Input
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=FPGA_MOSI
+PC8.Locked=true
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=FPGA_MISO
+PC9.Locked=true
+PC9.Signal=GPIO_Input
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407Z(E-G)Tx
@@ -185,6 +223,18 @@ PCC.Vdd=3.3
 PD0.Signal=FSMC_D2_DA2
 PD1.Signal=FSMC_D3_DA3
 PD10.Signal=FSMC_D15_DA15
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=AD9834_SDATA 
+PD11.Locked=true
+PD11.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=AD9834_SCLK 
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=AD9834_RESET 
+PD13.Locked=true
+PD13.Signal=GPIO_Output
 PD14.Signal=FSMC_D0_DA0
 PD15.Signal=FSMC_D1_DA1
 PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -199,6 +249,10 @@ PD3.Locked=true
 PD3.Signal=GPIO_Input
 PD4.Signal=FSMC_NOE
 PD5.Signal=FSMC_NWE
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=AD9834_FSYNC
+PD6.Locked=true
+PD6.Signal=GPIO_Output
 PD7.Mode=NorPsramChipSelect1_1
 PD7.Signal=FSMC_NE1
 PD8.Signal=FSMC_D13_DA13
