电赛v4算法初步完成

--- a/OSC_STM32F407.ioc
+++ b/OSC_STM32F407.ioc
@@ -114,25 +114,29 @@ Mcu.Pin45=PC6
 Mcu.Pin46=PC7
 Mcu.Pin47=PC8
 Mcu.Pin48=PC9
-Mcu.Pin49=PD0
+Mcu.Pin49=PC11
 Mcu.Pin5=PC13-ANTI_TAMP
-Mcu.Pin50=PD1
-Mcu.Pin51=PD2
-Mcu.Pin52=PD3
-Mcu.Pin53=PD4
-Mcu.Pin54=PD5
-Mcu.Pin55=PD6
-Mcu.Pin56=PD7
-Mcu.Pin57=PG12
-Mcu.Pin58=PE0
-Mcu.Pin59=PE1
+Mcu.Pin50=PD0
+Mcu.Pin51=PD1
+Mcu.Pin52=PD2
+Mcu.Pin53=PD3
+Mcu.Pin54=PD4
+Mcu.Pin55=PD5
+Mcu.Pin56=PD6
+Mcu.Pin57=PD7
+Mcu.Pin58=PG12
+Mcu.Pin59=PB7
 Mcu.Pin6=PH0-OSC_IN
-Mcu.Pin60=VP_CRC_VS_CRC
-Mcu.Pin61=VP_SYS_VS_Systick
+Mcu.Pin60=PB8
+Mcu.Pin61=PB9
+Mcu.Pin62=PE0
+Mcu.Pin63=PE1
+Mcu.Pin64=VP_CRC_VS_CRC
+Mcu.Pin65=VP_SYS_VS_Systick
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=62
+Mcu.PinsNb=66
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=4.15.0
@@ -183,10 +187,27 @@ PB2.GPIO_Label=BSP_T_DOUT
 PB2.GPIO_PuPd=GPIO_PULLUP
 PB2.Locked=true
 PB2.Signal=GPIO_Input
+PB7.GPIOParameters=GPIO_Speed,GPIO_Label
+PB7.GPIO_Label=FPGA_COM2
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Speed,GPIO_Label
+PB8.GPIO_Label=FPGA_COM1
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Speed,GPIO_Label
+PB9.GPIO_Label=FPGA_SCK
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC0.Locked=true
 PC0.Signal=GPIO_Input
 PC1.Locked=true
 PC1.Signal=GPIO_Input
+PC11.Locked=true
+PC11.Signal=GPIO_Input
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=BSP_T_CS
 PC13-ANTI_TAMP.Locked=true
@@ -203,12 +224,8 @@ PC6.Locked=true
 PC6.Signal=GPIO_Input
 PC7.Locked=true
 PC7.Signal=GPIO_Input
-PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=FPGA_SCK
 PC8.Locked=true
-PC8.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=UART_COM
+PC8.Signal=GPIO_Input
 PC9.Locked=true
 PC9.Signal=GPIO_Input
 PCC.Checker=false
@@ -223,16 +240,19 @@ PCC.Vdd=3.3
 PD0.Signal=FSMC_D2_DA2
 PD1.Signal=FSMC_D3_DA3
 PD10.Signal=FSMC_D15_DA15
-PD11.GPIOParameters=GPIO_Label
+PD11.GPIOParameters=GPIO_Speed,GPIO_Label
 PD11.GPIO_Label=AD9834_SDATA 
+PD11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD11.Locked=true
 PD11.Signal=GPIO_Output
-PD12.GPIOParameters=GPIO_Label
+PD12.GPIOParameters=GPIO_Speed,GPIO_Label
 PD12.GPIO_Label=AD9834_SCLK 
+PD12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD12.Locked=true
 PD12.Signal=GPIO_Output
-PD13.GPIOParameters=GPIO_Label
+PD13.GPIOParameters=GPIO_Speed,GPIO_Label
 PD13.GPIO_Label=AD9834_RESET 
+PD13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD13.Locked=true
 PD13.Signal=GPIO_Output
 PD14.Signal=FSMC_D0_DA0
@@ -249,8 +269,9 @@ PD3.Locked=true
 PD3.Signal=GPIO_Input
 PD4.Signal=FSMC_NOE
 PD5.Signal=FSMC_NWE
-PD6.GPIOParameters=GPIO_Label
+PD6.GPIOParameters=GPIO_Speed,GPIO_Label
 PD6.GPIO_Label=AD9834_FSYNC
+PD6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD6.Locked=true
 PD6.Signal=GPIO_Output
 PD7.Mode=NorPsramChipSelect1_1
@@ -261,7 +282,7 @@ PE0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutp
 PE0.GPIO_Label=ADS1110_SCL
 PE0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PE0.GPIO_PuPd=GPIO_NOPULL
-PE0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE0.Locked=true
 PE0.PinState=GPIO_PIN_SET
 PE0.Signal=GPIO_Output
@@ -269,7 +290,7 @@ PE1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutp
 PE1.GPIO_Label=ADS1110_SDA
 PE1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PE1.GPIO_PuPd=GPIO_NOPULL
-PE1.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE1.Locked=true
 PE1.PinState=GPIO_PIN_SET
 PE1.Signal=GPIO_Output
@@ -349,8 +370,7 @@ RCC.APB1Freq_Value=42000000
 RCC.APB1TimFreq_Value=84000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=84000000
-RCC.APB2TimCLKDivider=1
-RCC.APB2TimFreq_Value=84000000
+RCC.APB2TimFreq_Value=168000000
 RCC.CortexFreq_Value=168000000
 RCC.EthernetFreq_Value=168000000
 RCC.FCLKCortexFreq_Value=168000000
@@ -359,7 +379,7 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
